<resources>
    <string name="app_name">CarosalRecyclerView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_register_to_order">Login/Register to order</string>
    <string name="login_register">Login / Register</string>
    <string name="skip">Skip</string>
    <string name="login_or_register">Log in or Register</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="please_enter_your_mobile_number_and_proceed">Please enter your mobile number and proceed.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="next">Next</string>
    <string name="al_hamar_mall_nad_al_hamar_area_dubai_uae">Al Hamar Mall, Nad Al Hamar area, \nDubai - UAE</string>
</resources>